Made auto sprint extension and converted modules into factories

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
         "WORLD": true,
         "SOCKET": true,
         "POPUP": true,
-        "ENGINE": true
+        "ENGINE": true,
+        "XP": true,
+        "DSTEP": true
     }
 }
