--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "rules": {
     },
     "globals": {
+        "Extension": true,
         "YOU": true,
         "TIME": true,
         "WORLD": true,
