--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "POPUP": true,
         "ENGINE": true,
         "XP": true,
-        "DSTEP": true
+        "DSTEP": true,
+        "HANDS": true
     }
 }
