Created clean events extension and added event logs to logger

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "ENGINE": true,
         "XP": true,
         "DSTEP": true,
-        "HANDS": true
+        "HANDS": true,
+        "EVENTS": true
     }
 }
